Added Imranur as a contributor in the index page.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         {% endfor %}
       </div>
       <footer>
-        Maintained by <a href="https://sivanahamer.github.io/">Sivana Hamer</a>.
+        Maintained by <a href="https://sivanahamer.github.io/">Sivana Hamer</a> and <a href="https://imranur-rahman.github.io/">Imranur Rahman</a>.
       </footer>
     </div>
 
