--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
             <!-- <div class="well"> -->
               Select one or more tags to filter (otherwise all deadlines are displayed):
               <form class="form-inline">
+                {% assign grouped_types = site.data.types | group_by: 'type' %}
+                {% for group in grouped_types %}
                 <div class="form-group">
-                  {% for type in site.data.types %}
+                  <h4>{{ group.name | capitalize }}</h4> <!-- Group heading based on the type -->
+                  {% for type in group.items %}
                   <div class="checkbox">
                     <label>
                       <input type="checkbox" id="{{ type.tag }}-checkbox" class=""> {{ type.name }}
@@ -51,6 +54,7 @@
                   </div>
                   {% endfor %}
                 </div>
+                {% endfor %}
               </form>
             <!-- </div> -->
           </div>
